--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Up-For-Grabs",
   "version": "1.0.0",
-  "description": "An app to post and find items up for grabs",
+  "description": "API for Up For Grabs client.",
   "main": "index.js",
   "scripts": {
     "start": "node index",
@@ -14,6 +14,8 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.15.0",
+    "colors": "1.1.2",
+    "cors": "2.7.1",
     "express": "4.13.4",
     "jwt-simple": "0.5.0",
     "mongoose": "4.4.12",
