--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "API for Up For Grabs client.",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index",
     "mongo": "mongod"
   },
   "author": "Joshua N. Cox <joshua.n.cox@gmail.com> (http://jonoco.me/)",
@@ -18,6 +17,7 @@
     "cors": "2.7.1",
     "express": "4.13.4",
     "jwt-simple": "0.5.0",
+    "lodash": "4.11.1",
     "mongoose": "4.4.12",
     "morgan": "1.7.0",
     "nodemon": "1.9.1",
